--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,5 +1,5 @@
 {
-  "name": "WorkoutApp",
+  "name": "ExerciseApp",
   "icons": [
     {
       "src": "/icon.png",
@@ -16,7 +16,7 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "WorkoutApp.",
+  "description": "ExerciseApp.",
   "theme_color": "red",
   "background_color": "red"
 }
